--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ chrono = { version = "0.4.34", features = ["serde"] }
 reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.36.0", features = ["full"] }
+uuid = { version = "1.7.0", features = ["v4"] }
