--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,11 @@ edition = "2021"
 actix-cors = "0.7.0"
 actix-web = "4.5.1"
 chrono = { version = "0.4.34", features = ["serde"] }
+diesel = "2.1.4"
+dotenv = "0.15.0"
 reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
+sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-rustls", "macros"] }
 tokio = { version = "1.36.0", features = ["full"] }
 uuid = { version = "1.7.0", features = ["v4"] }
