WIP : get post e.g

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ DB_PORT=
 
 SERVER_PORT=8080
 SERVER_URL=localhost
+
+# Rust supports this feature.
+DATABASE_URL=mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
