--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-fly-test"
+name = "rust-todos-server"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,6 +9,7 @@ edition = "2021"
 actix-cors = "0.7.0"
 actix-web = "4.5.1"
 chrono = { version = "0.4.34", features = ["serde"] }
+chrono-tz = "0.8.6"
 diesel = "2.1.4"
 dotenv = "0.15.0"
 reqwest = { version = "0.11.24", features = ["json"] }
